# Two-Tower-Recommendation-System

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  verify.py
configs/: cl_retrieval.yaml  data.yaml  ranker.yaml  retrieval.yaml  retrieval_sample_stronger.yaml  serving.yaml  transformer_retrieval.yaml  transformer_retrieval_residual.yaml  transformer_retrieval_stable.yaml
docs/: architecture.md  contrastive_retriever.md  data_pipeline.md  development.md  docker_local.md  evidence.md  fastapi_serving.md  github_profile_summary.md  neural_ranker.md  ollama_explanations.md  production_scorer.md  project_log.md  project_status.md  release_checklist.md  retrieval_baseline.md  serving_api.md  transformer_retriever.md
scripts/: __init__.py  benchmark_serving_api.py  check_contrastive_acceptance.py  check_docker_artifacts.py  check_production_scorer_acceptance.py  check_ranker_acceptance.py  check_residual_acceptance.py  compare_retrieval_ranker.py  compare_retrievers.py  diagnose_ranker_candidates.py  diagnose_transformer_retriever.py  docker_smoke_test.py  download_movielens.py  evaluate_ranker.py  evaluate_retriever.py  export_faiss_index.py  generate_ranker_candidates.py  overfit_retriever.py  prepare_data.py  run_api.py  run_contrastive_ablation.py  run_full_residual_training.py  run_residual_transformer_ablation.py  run_retrieval_ablation.py  run_retrieval_smoke.py  run_transformer_ablation.py  select_production_scorer.py  smoke_test_api.py  start_mlflow_ui.py  train_ranker.py  train_retriever.py  validate_ollama_explanations.py  validate_serving_api.py  verify_environment.py
tests/: conftest.py  test_cl_retriever.py  test_config.py  test_contrastive_losses.py  test_docker_packaging.py  test_download.py  test_faiss_index.py  test_features.py  test_mlflow_sqlite.py  test_pipeline_smoke_500.py  test_preprocessing.py  test_production_scorer_acceptance.py  test_production_scorer_hybrid.py  test_ranker_acceptance.py  test_ranker_candidates.py  test_splits.py  (+24 more)
(+56 files in other folders)
