[project]
name = "movielens-two-tower-recommender"
version = "0.1.0"
description = "CL-enhanced transformer two-tower recommendation system for MovieLens-25M"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
	{ name = "Recommendation Engineering Team" }
]
dependencies = [
	"faiss-cpu>=1.8.0",
	"fastapi>=0.115.0",
	"httpx>=0.27.0",
	"matplotlib>=3.9.0",
	"mlflow>=2.17.0",
	"numpy>=2.1.0",
	"optuna>=4.0.0",
	"orjson>=3.10.0",
	"polars>=1.10.0",
	"pyarrow>=17.0.0",
	"pydantic>=2.9.0",
	"pydantic-settings>=2.5.0",
	"pyyaml>=6.0.2",
	"scikit-learn>=1.5.0",
	"torch>=2.5.0",
	"tqdm>=4.66.0",
	"typer>=0.12.0",
	"uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
	"mypy>=1.11.0",
	"pytest>=8.3.0",
	"pytest-cov>=5.0.0",
	"ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["N806", "B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/movie_recsys"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["yaml", "tqdm"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faiss"]
ignore_missing_imports = true
